Make it compile and run on Java 24