@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.release>24</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jmh.version>1.37</jmh.version>
         <maven.compiler.version>3.14.0</maven.compiler.version>
@@ -41,8 +41,7 @@
                 <version>${maven.compiler.version}</version>
                <configuration>
                 <compilerArgs>
-                    <!--<arg>-proc:full</arg>-->
-                    <arg>--enable-preview</arg>
+                    <arg>-proc:full</arg>
                 </compilerArgs>
                </configuration>
             </plugin>
